--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">JJinWeather</string>
+
+    <!-- error -->
+    <string name="error_unknown_address">알 수 없는 위치</string>
+    <string name="error_location_not_found">위치를 가져올 수 없습니다.</string>
 </resources>
