--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
 
     <string name="tutorial_back_arrow_icon_desc">이전</string>
     <string name="tutorial_next_arrow_icon_desc">다음</string>
+
+    <string name="loading_background_img_desc">로딩 화면 중앙 배경 이미지</string>
+    <string name="loading_title">Loading...</string>
 </resources>
