--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,10 @@
     <string name="moon_phase_before_full_moon">보름달 전</string>
     <string name="moon_phase_full_moon">보름달</string>
     <string name="moon_phase_after_full_moon">보름달 후</string>
+    
+    <string name="outfit_success_img_desc">온도에 맞는 옷 추천 이미지</string>
+    <string name="outfit_success_switch_icon_desc">이미지 전환 아이콘</string>
+    <string name="outfit_error_img_desc">추천 옷 에러 이미지</string>
+    <string name="outfit_error">현재 온도에 맞는 옷을 찾지 못했습니다.</string>
+    <string name="outfit_error_button_retry">재요청</string>
 </resources>
