--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,11 @@
     <string name="outfit_error_img_desc">추천 옷 에러 이미지</string>
     <string name="outfit_error">현재 온도에 맞는 옷을 찾지 못했습니다.</string>
     <string name="outfit_error_button_retry">재요청</string>
+
+    <string name="outfit_hourly_forecast_graph">시간별 온도 그래프</string>
+    <string name="outfit_back_icon_desc">뒤로가기</string>
+    <string name="outfit_title">오늘 뭐 입지?</string>
+    <string name="outfit_max_temperature">최고 온도</string>
+    <string name="outfit_min_temperature">최저 온도</string>
+    <string name="outfit_feels_like_temperature">체감 온도</string>
 </resources>
