--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="success_add_location_icon_secs">위치 추가하기</string>
 
     <string name="success_current_temperature_icon_desc">현재 날씨 아이콘</string>
-    <string name="success_temperature">%1$d°</string>
+    <string name="success_temperature">%1$s°</string>
     <string name="success_current_min_temperature">최저: %1$d°</string>
     <string name="success_current_max_temperature">최고: %1$d°</string>
     <string name="success_compared_high">어제보다 %1$d° 높아요</string>
@@ -60,7 +60,7 @@
     <string name="success_hourly_forecast_temperature_icon_desc">시간별 날씨 아이콘</string>
     <string name="success_hourly_forecast_am">오전</string>
     <string name="success_hourly_forecast_pm">오후</string>
-    <string name="success_hourly_forecast_hour">%1$d시</string>
+    <string name="success_hourly_forecast_hour">%1$s시</string>
 
     <string name="success_daily_forecast_title">일별 예보</string>
     <string name="success_daily_forecast_icon_desc">일별 예보 아이콘</string>
